--- a/sass/pages/_page-amenities.scss
+++ b/sass/pages/_page-amenities.scss
@@ -7,18 +7,8 @@
     .section-header {
         margin-bottom: 1.250em;
 
-        h2 {
-            padding: 0 .1em;
-
-            @include respond-to(small) {
-                padding: 0 .4em;
-            }
-        }
-
         @include respond-to(medium) {
             margin-bottom: 1.688em;
-
-
         }
     }
 
@@ -46,6 +36,8 @@
         position: relative;
         overflow: hidden;
         font-family: $font__regular;
+        display: flex;
+        flex-direction: column;
 
         &:after {
             content: '';
@@ -54,15 +46,15 @@
         }
 
         @include respond-to('small-land') {
-            width: 33%;
+            width: calc(100% / 3);
         }
 
         @include respond-to('tablet') {
-            width: 25%;
+            width: calc(100% / 4);
         }
 
         @include respond-to('medium') {
-            width: 20%;
+            width: calc(100% / 5);
         }
     }
 
@@ -76,25 +68,14 @@
         padding: 1em;
         overflow: hidden;
         display: flex;
-        flex-wrap:wrap;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        img,
-        span,
-        .view {
-            transition: opacity .25s ease-in-out ;
-        }
-
-        span,
-        .view {
+        span{
             position: relative;
             z-index: 5;
-        }
-
-        span {
-            max-width: 100%;
+            transition: opacity .25s ease-in-out;
         }
 
         img {
@@ -107,6 +88,48 @@
             width: 100%;
             z-index: 1;
             opacity: .2;
+            transition: opacity .25s ease-in-out ;
+        }
+
+        .title {
+            text-transform: uppercase;
+            font-size: 1rem;
+            line-height: 1.1;
+            font-family: $font__regular;
+            width: 100%;
+
+            @include respond-to(small) {
+                font-size: 1.2rem;
+            }
+
+            @include respond-to(small-land) {
+                font-size: 1.1rem;
+            }
+
+            @include respond-to(medium) {
+                font-size: 1.2rem;
+            }
+
+            @include respond-to(large) {
+                font-size: 1.3rem;
+            }
+        }
+
+        .view {
+            background-color: transparent;
+            text-decoration: underline;
+            position: relative;
+            z-index: 5;
+            font-size: 0.8667rem;
+            transition: opacity .25s ease-in-out ;
+
+            &:hover {
+                cursor: pointer;
+            }
+
+            @include respond-to(medium) {
+                font-size: 1rem;
+            }
         }
 
         .close {
@@ -114,10 +137,10 @@
             top: .3em;
             right: .3em;
             opacity: 0;
-            color: #000;
+            color: #fff;
             font-size:  1.733rem;
             background-color: $color__brand-seagreen;
-            font-family: $font__regular;
+            font-family: $font__bold;
             text-decoration: none;
             display: inline-block;
             width: 40px;
@@ -127,9 +150,9 @@
             white-space: nowrap;
             vertical-align: middle;
             border-radius: 50%;
-            border: 3px solid #000;
+            border: 3px solid #fff;
             box-shadow:
-                0 0 0 1px hsl(0, 0%, 0%);
+                0 0 0 1px hsl(0, 0%, 100%);
             z-index: 2;
 
             &:hover {
@@ -142,21 +165,20 @@
                 font-size: 1.667rem;
             }
         }
+    }
 
-        .view {
-            background-color: transparent;
-            text-decoration: underline;
-            color: #000;
+    .disclaimer {
+        font-size: 0.8125rem;
+        font-family: $font__regular;
+        text-align: center;
+        padding-top: 1em;
 
-            &:hover {
-                cursor: pointer;
-            }
-
-            @include respond-to(medium) {
-                font-size: 1.067rem;
-            }
+        @include respond-to(medium) {
+            font-size: 1rem;
         }
     }
+
+    // Styles for JS active class
 
     .highlight-inner.active img,
     .highlight-inner.active .close {
@@ -175,44 +197,5 @@
     .highlight-inner.active span,
     .highlight-inner.active .view:hover {
         cursor: default;
-    }
-
-    .title {
-        text-transform: uppercase;
-        font-size: .9rem;
-        line-height: 1.1;
-        font-family: $font__regular;
-        max-width: 100%;
-        -ms-flex: 1 0 auto;
-        flex: 0 1 auto;
-
-        @include respond-to(large) {
-            font-size: 1.533rem;
-        }
-    }
-
-    .view {
-        font-size: 0.8667rem;
-
-        @include respond-to('large') {
-            font-size: 1rem;
-        }
-    }
-
-    // for equal spacing of text inside highlight
-    .hide-btn {
-        visibility: hidden;
-        // display: none;
-    }
-
-    .disclaimer {
-        font-size: 0.8125rem;
-        font-family: $font__regular;
-        text-align: center;
-        padding-top: 1em;
-
-        @include respond-to(medium) {
-            font-size: 1rem;
-        }
     }
 }
