--- a/sass/footer/_footer.scss
+++ b/sass/footer/_footer.scss
@@ -14,6 +14,11 @@
     padding-bottom: 2em;
     line-height: 1.25;
 
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
+
     h2 {
         color: #fff;
         font-size: 1.133rem;
