--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -18,6 +18,7 @@ textarea {
 	border: none;
 	border-radius: 0;
 	padding: 3px;
+    appearance: none;
 
 	&:focus {
 		color: $color__text-input-focus;
@@ -26,8 +27,10 @@ textarea {
 
 select {
 	border: 1px solid $color__border-input;
+    appearance: none;
 }
 
 textarea {
 	width: 100%;
+    appearance: none;
 }
