--- a/sass/navigation/_masthead.scss
+++ b/sass/navigation/_masthead.scss
@@ -66,7 +66,7 @@
                             font-size: .5em;
                             margin-right: 10px;
                             vertical-align: middle;
-                            // position: absolute;
+                            appearance: none;
                         }
 
                         @include respond-to(small-land) {
