bout to try some shiz

--- a/sass/navigation/_masthead.scss
+++ b/sass/navigation/_masthead.scss
@@ -61,7 +61,7 @@
                         text-transform: uppercase;
 
                         &:before {
-                            content: '\25b6';
+                            content: '\25b6\fe0e';
                             color: #fff;
                             font-size: .5em;
                             margin-right: 10px;
